--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -1,6 +1,7 @@
-<ul class="itemBoxTable__bodyRow">
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-    <div class="itemBoxTable__bodyCellInner">
+<ul class="itemBox__row">
+  <li class="itemBox__cell">
+    <div class="itemBox__cellInner">
+
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
@@ -8,10 +9,12 @@
           </div>
         </div>
       </div>
+
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-    <div class="itemBoxTable__bodyCellInner">
+  <li class="itemBox__cell align-center">
+    <div class="itemBox__cellInner">
+
       <div class="pmx-selector">
         <div class="pmx-selector__item pmx-selector__item--selected">
           <div class="pmx-selector__block ">
@@ -19,10 +22,12 @@
           </div>
         </div>
       </div>
+
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1 itemBoxTable__bodyCell--align-right">
-    <div class="itemBoxTable__bodyCellInner">
+  <li class="itemBox__cell align-right">
+    <div class="itemBox__cellInner">
+
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
@@ -30,6 +35,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </li>
 </ul>
