--- a/_includes/blocks/popup/ms-create-new.html
+++ b/_includes/blocks/popup/ms-create-new.html
@@ -1,5 +1,7 @@
-<ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore JS_createNewTag JS_filterableCell">
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-    <div class="itemBoxTable__bodyCellInner JS_text">Create New</div>
+<ul class="itemBox__row JS_createNewTag JS_filterableCell">
+  <li class="itemBox__cell itemBox__cell--action">
+    <div class="itemBox__cellInner JS_text">
+      <div class="itemBox__action">Create New</div>
+    </div>
   </li>
 </ul>
