--- a/_includes/blocks/popup/ms-excluded-toggle.html
+++ b/_includes/blocks/popup/ms-excluded-toggle.html
@@ -1,7 +1,7 @@
 <div class="pmx-selector JS_toggle--InclExcl">
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
+      <div class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</div>
     </div>
   </div>
 </div>
