--- a/_includes/blocks/popup/ms-load-more.html
+++ b/_includes/blocks/popup/ms-load-more.html
@@ -1,5 +1,7 @@
-<ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore">
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-    <div class="itemBoxTable__bodyCellInner ">Load <span>10</span> more</div>
+<ul class="itemBox__row itemBox__row--item">
+  <li class="itemBox__cell itemBox__cell--action">
+    <div class="itemBox__cellInner">
+      <div class="itemBox__action">Load <span>10</span> more</div>
+    </div>
   </li>
 </ul>
