--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -25,6 +25,8 @@
 <!-- filters -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
+<!-- sortable -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sortable.js"></script>
 
 <!-- new multiselect -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
@@ -41,6 +43,8 @@
 
 <!-- breadcrumbs -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
+
+
 
 
 <!-- OUR PLUGINS/COMPONENTS _NOT_ USED IN EVERY PAGE -->
