--- a/_includes/javascript/addGroupAction.html
+++ b/_includes/javascript/addGroupAction.html
@@ -1,5 +1,5 @@
-<li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
-  <div class="itemBoxTable__bodyCellInner">
-    <i class="itemBoxTable__action JS_itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</i>
+<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll">
+  <div class="itemBox__cellInner">
+    <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
   </div>
 </li>
