--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,4 +1,5 @@
-<div class="itemBoxTable__bodyCellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
+<div class="itemBox__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
+
   ${colorToggleHTML}
   <div class="pmx-selector pmx-selector--readonly">
     <div class="pmx-selector__item">
@@ -8,4 +9,5 @@
       </div>
     </div>
   </div>
+  
 </div>
