--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,15 +1,15 @@
-<ul class="itemBoxTable__bodyRow JS_filterableCell">
-  <li class="itemBoxTable__bodyCell ${textActionClass}" style="flex-grow: 1;">
+<ul class="itemBox__row JS_filterableCell">
+  <li class="itemBox__cell ${textActionClass}">
     ${newSelectedItemHTML}
   </li>
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
-    <div class="itemBoxTable__bodyCellInner">
-      <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <div class="itemBox__cellInner">
+      <i class="itemBox__action itemBox__action--hidden">އ</i>
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-    <div class="itemBoxTable__bodyCellInner">
-      <i class="itemBoxTable__action JS_itemBoxTable__action--remove">—</i>
+  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+    <div class="itemBox__cellInner">
+      <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</i>
     </div>
   </li>
 </ul>
