--- a/_includes/javascript/removeAction.html
+++ b/_includes/javascript/removeAction.html
@@ -1,5 +1,5 @@
-<li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-  <div class="itemBoxTable__bodyCellInner">
-    <i class="itemBoxTable__action JS_itemBoxTable__action--remove">—</i>
+<li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+  <div class="itemBox__cellInner">
+    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
   </div>
 </li>
