--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,107 +1,94 @@
 <div class="multiSelector multiSelector--popup multiSelector--popup-semsearch JS_semsearch-1">
 
   <div class="itemBox">
-    <div class="itemBoxTable">
-      <div class="itemBoxBody">
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+    <ul class="itemBox__row">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
 
-              <input type="search" class="JS_multiSelector__filterInput" placeholder="search through items">
+          <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="search through items">
 
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
-            <div class="itemBoxTable__bodyCellInner">
-
-              <i class="itemBoxTable__action">ञ</i>
-
-            </div>
-          </li>
-        </ul>
-        <!-- /.itemBoxTable__bodyRow -->
-      </div>
-    </div>
-  </div>
+        </div>
+      </li>
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action">ञ</div>
+        </div>
+      </li>
+    </ul>
+  </div><!-- /.itemBox -->
 
   <div class="itemBox">
-    <div class="itemBoxTable">
-      <div class="itemBoxBody">
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
-                    <span class="pmx-selector__blockSeperator"></span>
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
-                  </div>
-                </div>
+          <div class="pmx-selector pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
+                <span class="pmx-selector__blockSeperator"></span>
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
               </div>
-
             </div>
-          </li>
-        </ul>
-        <!-- /.itemBoxTable__bodyRow -->
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+          </div>
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
-                    <span class="pmx-selector__blockSeperator"></span>
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
-                  </div>
-                </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+
+          <div class="pmx-selector pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                <span class="pmx-selector__blockSeperator"></span>
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
               </div>
-
             </div>
-          </li>
-        </ul>
-        <!-- /.itemBoxTable__bodyRow -->
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell  " style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+          </div>
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
-                    <span class="pmx-selector__blockSeperator"></span>
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
-                  </div>
-                </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+
+          <div class="pmx-selector pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+                <span class="pmx-selector__blockSeperator"></span>
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
               </div>
-
             </div>
-          </li>
-        </ul>
-        <!-- /.itemBoxTable__bodyRow -->
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell  " style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">
+          </div>
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
-                    <span class="pmx-selector__blockSeperator"></span>
-                    <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
-                  </div>
-                </div>
+        </div>
+      </li>
+    </ul>
+
+    <ul class="itemBox__row itemBox__row--item">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">
+
+          <div class="pmx-selector pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
+                <span class="pmx-selector__blockSeperator"></span>
+                <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
               </div>
-
             </div>
-          </li>
-        </ul>
-        <!-- /.itemBoxTable__bodyRow -->
-      </div>
-    </div>
-  </div>
-  <!-- /.itemBox -->
+          </div>
 
-</div>
+        </div>
+      </li>
+    </ul>
+  </div><!-- /.itemBox -->
+
+</div><!-- /.multiSelector -->
