--- a/_includes/blocks/popup/include-exclude-selector.html
+++ b/_includes/blocks/popup/include-exclude-selector.html
@@ -13,15 +13,15 @@
 
 
 <div class="pmx-selector pmx-selector--expanded pmx-selector--required pmx-selector--toggleselect JS_selector">
-  <div class="pmx-selector__item JS_selectorItem  {{includeSelectedClass}} JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
+  <div class="pmx-selector__item JS_selectorItem  {{includeSelectedClass}} JS_itemBox__cellInner--inclExcl" data-filter="Include">
     <div class="pmx-selector__block">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
+      <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</div>
     </div>
   </div>
   <div class="pmx-selector__itemSeperator"></div>
-  <div class="pmx-selector__item JS_selectorItem {{excludeSelectedClass}} JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
+  <div class="pmx-selector__item JS_selectorItem {{excludeSelectedClass}} JS_itemBox__cellInner--inclExcl" data-filter="Exclude">
     <div class="pmx-selector__block">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
+      <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</div>
     </div>
   </div>
 </div>
