--- a/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
+++ b/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
@@ -1,32 +1,32 @@
-<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--filterInclExcl">
-  <div class="itemBoxTable">
-    <div class="itemBoxBody">
-      <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
-                </div>
-              </div>
+<div class="itemBox itemBox--children-sublist JS_itemBox--filterInclExcl">
+  <ul class="itemBox__row">
+    <li class="itemBox__cell">
+      <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Include">
+
+        <div class="pmx-selector pmx-selector--readonly">
+          <div class="pmx-selector__item">
+            <div class="pmx-selector__block">
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
             </div>
           </div>
-        </li>
-      </ul>
-      <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
-                </div>
-              </div>
+        </div>
+
+      </div>
+    </li>
+  </ul>
+  <ul class="itemBox__row">
+    <li class="itemBox__cell">
+      <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Exclude">
+
+        <div class="pmx-selector pmx-selector--readonly">
+          <div class="pmx-selector__item">
+            <div class="pmx-selector__block">
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
             </div>
           </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+        </div>
+
+      </div>
+    </li>
+  </ul>
 </div>
