--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -1,33 +1,31 @@
-<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--suggestions" style="display: none;">
-  <div class="itemBoxTable">
-    <div class="itemBoxBody">
-      {% for item in site.data.tag-picker-color.suggestions %}
-        <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
-            <div class="itemBoxTable__bodyCellInner JS_toggle--color ">
-              {% include javascript/colorToggle.html color=item.color %}
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
-                  </div>
-                </div>
+<div class="itemBox itemBox--children-sublist JS_itemBox--suggestions" style="display: none;">
+  {% for item in site.data.tag-picker-color.suggestions %}
+    <ul class="itemBox__row">
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner JS_toggle--color">
+
+          {% include javascript/colorToggle.html color=item.color %}
+          <div class="pmx-selector pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
               </div>
             </div>
-          </li>
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex0 itemBoxTable__bodyCell--draggable ui-sortable-handle">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-            </div>
-          </li>
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex0 JS_itemBoxTable__bodyCell--remove">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action JS_itemBoxTable__action--remove">—</i>
-            </div>
-          </li>
-        </ul>
-        {% include blocks/popup/ms-tags-colors-color-sublist.html %}
-      {% endfor %}
-    </div>
-  </div>
+          </div>
+
+        </div>
+      </li>
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBox__cell--draggable ui-sortable-handle">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action itemBoxTable__action--drag">އ</div>
+        </div>
+      </li>
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action JS_itemBoxTable__action--remove">—</div>
+        </div>
+      </li>
+    </ul>
+    {% include blocks/popup/ms-tags-colors-color-sublist.html %}
+  {% endfor %}
 </div>
