--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -10,87 +10,93 @@
   <div class="user-menu__actions">
 
     <div class="itemBox">
-      <div class="itemBoxTable">
-        <div class="itemBoxTable__body">
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">ढ</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Home</div>
-              </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">ण</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">My To Do's</div>
-              </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">झ</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Time sheets</div>
-              </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">ऌ</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Reports</div>
-              </li>
-          </ul>
-        </div>
-      </div>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--actionn">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ढ</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Home</div>
+          </div>
+        </li>
+      </ul>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ण</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">My To Do's</div>
+          </div>
+        </li>
+      </ul>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">झ</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Time sheets</div>
+          </div>
+        </li>
+      </ul>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ऌ</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Reports</div>
+          </div>
+        </li>
+      </ul>
     </div><!-- /.itemBox -->
 
     <div class="itemBox">
-      <div class="itemBoxTable">
-        <div class="itemBoxTable__body">
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">ट</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Help</div>
-              </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">ड</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Settings</div>
-              </li>
-          </ul>
-          <ul class="itemBoxTable__bodyRow">
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
-                  <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action">त</i>
-                  </div>
-              </li>
-              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                  <div class="itemBoxTable__bodyCellInner ">Logout</div>
-              </li>
-          </ul>
-        </div>
-      </div>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ट</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Help</div>
+          </div>
+        </li>
+      </ul>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">ड</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Settings</div>
+          </div>
+        </li>
+      </ul>
+      <ul class="itemBox__row itemBox__row--item">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">त</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--action">
+          <div class="itemBox__cellInner">
+            <div class="itemBox__action">Logout</div>
+          </div>
+        </li>
+      </ul>
     </div><!-- /.itemBox -->
 
   </div>
