--- a/_includes/javascript/newSelectedItem--text.html
+++ b/_includes/javascript/newSelectedItem--text.html
@@ -1,3 +1,3 @@
-<div class="itemBoxTable__bodyCellInner ">
-  <div class="fnt JS_text">${textOfActionItem}</div>
+<div class="itemBox__cellInner">
+  <div class="JS_text">${textOfActionItem}</div>
 </div>
