--- a/_includes/javascript/selectedBlock-Include.html
+++ b/_includes/javascript/selectedBlock-Include.html
@@ -1,24 +1,21 @@
-<ul class="itemBoxTable__bodyRow  JS_multiSelector__box--selectionTitleInclude">
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
-    <div class="itemBoxTable__bodyCellInner">
-      <i class="itemBoxTable__action--toggle">ऄ Include</i>
+<ul class="itemBox__row  JS_multiSelector__box--selectionTitleInclude">
+  <li class="itemBox__cell itemBox__cell--action">
+    <div class="itemBox__cellInner">
+      <div class="itemBox__action">ऄ Include</div>
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right " style="flex-grow: 1;" data-flex="1">
-    <div class="itemBoxTable__bodyCellInner">
+  <li class="itemBox__cell align-right">
+    <div class="itemBox__cellInner">
       {% include javascript/and-or-selector.html %}
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
-    <div class="itemBoxTable__bodyCellInner">
-      <i class="itemBoxTable__action JS_itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</i>
+  <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
+    <div class="itemBox__cellInner">
+      <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
     </div>
   </li>
 </ul>
 
 <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
-  <div class="itemBoxTable">
-    <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
-    </div>
-  </div>
+  <div class="itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable"></div>
 </div>
