--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -17,9 +17,9 @@
           <div class="itemBox__action">ऄ Selected</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--removeAllSelected">—</div>
         </div>
       </li>
     </ul>
@@ -31,14 +31,14 @@
             <li class="itemBox__cell itemBox__cell--actionToggle JS_textAction">
               <div class="itemBox__cellInner JS_text">{{selected}}</div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action  itemBoxTable__bodyCell--draggable">
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action itemBox__action--drag">އ</div>
+                <div class="itemBox__action itemBox__action--hidden">އ</div>
               </div>
             </li>
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action  JS_itemBoxTable__bodyCell--remove">
-              <div class="itemBox__cellInner itemBoxTable__bodyCellInner--action">
-                <div class="itemBox__action JS_itemBoxTable__action--remove">—</div>
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action  JS_itemBox__cell--remove">
+              <div class="itemBox__cellInner itemBox__cellInner--action">
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
               </div>
             </li>
           </ul>
@@ -52,14 +52,14 @@
           <div class="itemBox__action">ऄ All</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--remove">—</div>
+          <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
         </div>
       </li>
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll">
         <div class="itemBox__cellInner">
-          <div class="itemBox__action JS_itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</div>
+          <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
         </div>
       </li>
     </ul>
@@ -73,16 +73,16 @@
             </div>
           </li>
           {% if group.noneSelected == "false" %}
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll">
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove JS_itemBox__cell--removeAll">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--remove">—</div>
+                <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--removeAll JS_itemBox__action--remove">—</div>
               </div>
             </li>
           {% endif %}
           {% if group.allSelected == "false" %}
-            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll">
+            <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add JS_itemBox__cell--addAll">
               <div class="itemBox__cellInner">
-                <div class="itemBox__action JS_itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</div>
+                <div class="itemBox__action JS_itemBox__action--add JS_itemBox__action--addAll">ބ</div>
               </div>
             </li>
           {% endif %}
@@ -90,20 +90,20 @@
 
         <div class="itemBox">
           {% for item in group.items %}
-            <ul class="itemBox__row itemBox__row--item itemBoxTable__bodyRow--action JS_filterableCell">
+            <ul class="itemBox__row itemBox__row--item itemBox__row--action JS_filterableCell">
               <li class="itemBox__cell JS_textAction">
                 <div class="itemBox__cellInner JS_text">{{item.name}}</div>
               </li>
               {% if item.selected == "true" %}
-                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--remove">
+                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--remove">
                   <div class="itemBox__cellInner">
-                    <div class="itemBox__action JS_itemBoxTable__action--remove">—</div>
+                    <div class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove">—</div>
                   </div>
                 </li>
               {% else %}
-                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBoxTable__bodyCell--add">
+                <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_itemBox__cell--add">
                   <div class="itemBox__cellInner">
-                    <div class="itemBox__action JS_itemBoxTable__action--add">ބ</div>
+                    <div class="itemBox__action JS_itemBox__action--add">ބ</div>
                   </div>
                 </li>
               {% endif %}
