--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -583,7 +583,8 @@
       &:hover {
         .itemBox {
           &__action {
-            &--drag {
+            &--drag,
+            &--hidden {
               opacity: 1;
             }
           }
@@ -638,6 +639,9 @@
     &--flex1 { flex-grow: 1; }
     &--flex2 { flex-grow: 2; }
     &--flex3 { flex-grow: 3; }
+    &--flex4 { flex-grow: 4; }
+    &--flex5 { flex-grow: 5; }
+    &--flex6 { flex-grow: 6; }
 
     &--action {
       color: #C79D54;
@@ -694,8 +698,13 @@
       pointer-events: none;
     }
 
-    &--drag {
+    &--drag,
+    &--hidden {
       opacity: 0;
+    }
+
+    &--secondary {
+      color: red;
     }
   }
 }
