--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -1,6 +1,16 @@
 ---
 ---
 
+.align-left {
+  text-align: left;
+}
+.align-center {
+  text-align: center;
+}
+.align-right {
+  text-align: right;
+}
+
 /* Fonts */
 
 .fnt {
